# WishlistApi

./: .gitignore  .travis.yml  Dockerfile  README.md  config.py  docker-compose-pg-db.yaml  docker-compose.yaml  mypy.ini  prod.sh  pyproject.toml  requirements.txt  test_all.py
app/: __init__.py  models.py
app/auth/: __init__.py  decorators.py  routes.py
app/wishlist/: __init__.py  argument_parsers.py  dto.py  marshal_models.py  post_models.py  routes.py
app/wishlist/routes/: __init__.py  share_wishlist.py  wishlist.py  wishlist_item.py
migrations/versions/: 2186550aa296_init_migration.py  e782f22dd36a_init_migration.py  fd57cbedeee9_.py
