[tool.poetry]
name = "wishlistapi"
version = "0.1.0"
description = ""
authors = ["rostislav <rostmoguchiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_restx = "^0.2.0"
p = "^0.0.0"
python-dotenv = "^0.14.0"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
